--- a/aboutme.html
+++ b/aboutme.html
@@ -28,9 +28,9 @@ requirements. One of the requirements for the endorsement is to have two
 completed one of the E.L.Os last Summer when I went to a computer building camp.
 </p>
   
-<p font-size:30px text-align:left><b>"Likes"</b></h6>
+<p font-size:30px text-align:left><b>"Likes"</b></p>
   
-<p font-size:30px text-alighn:right><b>"Dislikes</b></h6>
+<p font-size:30px text-alighn:right><b>"Dislikes</b></p>
 
   <p text-align:left>"Doctor Who"</p>
   <p text-align:right>"Crowds"</p>
@@ -50,7 +50,7 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   Catherine came up with the actual idea of the game. And Pei Yoa coded a bubble that floats across the screen from time to
   time that helps you win the game. The objective was to avoid the fish, and catch the bubbles for air.</p>
   
-  <h5 text-align:center>"Favorite Links"</h6>
-  <a hre="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">"Nathan Sharp"<a>
+  <h5 text-align:center>"Favorite Links"</h5>
+  <a hre="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">"Nathan Sharp"</a>
 </body>
 </html>
