--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   
   <p text-align:left>"Video Games"</p>
   
-  <p font-size:30px text-alighn:right><b>"Dislikes</b></p>
+  <p font-size:30px text-align:right><b>"Dislikes</b></p>
   
   <p text-align:right>"Crowds"</p>
    <p text-align:right>"Cities"</p>
