--- a/aboutme.html
+++ b/aboutme.html
@@ -15,9 +15,9 @@ border: 1px solid red;
 </head>
 <body>
   
-<h1><strong>"Alexandrea Whitehouse"</strong></h1>
+<h1><strong>Alexandrea Whitehouse</strong></h1>
   
-<h4 text-align:center><b>"Bio"</b></h4>
+<h4 text-align:center><b>Bio</b></h4>
   
 <p id="p01">I am a sixteen year-old girl who lives in the small town of North Berwick, 
 Maine. I joined <abbr title="Girls Who Code">GWC</abbr> as to complete the 
@@ -29,35 +29,35 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
 </p>
   
 
-  <p font-size:30px text-align:left><b>"Likes"</b></p>
+  <p font-size:30px text-align:left><b>Likes</b></p>
 
 
-  <p text-align:left>"Doctor Who"</p>
+  <p text-align:left>Doctor Who</p>
   
-  <p text-align:left>"Sherlock"</p>
+  <p text-align:left>Sherlock</p>
  
-  <p text-align:left>"Harry Potter"</p>
+  <p text-align:left>Harry Potter</p>
   
-  <p text-align:left>"Anime"</p>
+  <p text-align:left>Anime</p>
   
-  <p text-align:left>"Video Games"</p>
+  <p text-align:left>Video Games</p>
   
-  <p font-size:30px text-align:right><b>"Dislikes</b></p>
+  <p font-size:30px text-align:right><b>Dislikes</b></p>
   
-  <p text-align:right>"Crowds"</p>
-   <p text-align:right>"Cities"</p>
-  <p text-align:right>"Heights"</p>
-  <p text-align:right>"Presents"</p>
+  <p text-align:right>Crowds</p>
+   <p text-align:right>Cities</p>
+  <p text-align:right>Heights</p>
+  <p text-align:right>Presents</p>
   
-  <h4 text-align:center>"FunFact"</h4>
-  <p>"I want to be a video game designer"</p>
+  <h4 text-align:center>FunFact</h4>
+  <p>I want to be a video game designer</p>
   
-  <img src="Capture.PNG" alt="Game made on a website called scratch" width="196" height="110">
-  <p>"This is a game that me and a few other girls made. My friend Gabby drew the fish and the background. 
+  <img src="Capture.PNG" alt="Game made on a website called scratch" width="19600" height="11000">
+  <p>This is a game that me and a few other girls made. My friend Gabby drew the fish and the background. 
   Catherine came up with the actual idea of the game. And Pei Yoa coded a bubble that floats across the screen from time to
   time that helps you win the game. The objective was to avoid the fish, and catch the bubbles for air.</p>
   
-  <h4 text-align:center>"Favorite Links"</h4>
+  <h4 text-align:center>Favorite Links</h4>
   <a hre="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">"Nathan Sharp"</a>
 </body>
 </html>
