--- a/aboutme.html
+++ b/aboutme.html
@@ -32,25 +32,25 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   <p font-size:30px text-align:left><b>Likes</b></p>
 
 
-  <p text-align:left>Doctor Who</p>
+  <p text-align:left>-Doctor Who</p>
   
-  <p text-align:left>Sherlock</p>
+  <p text-align:left>-Sherlock</p>
  
-  <p text-align:left>Harry Potter</p>
+  <p text-align:left>-Harry Potter</p>
   
-  <p text-align:left>Anime</p>
+  <p text-align:left>-Anime</p>
   
-  <p text-align:left>Video Games</p>
+  <p text-align:left>-Video Games</p>
   
   <p font-size:30px text-align:right><b>Dislikes</b></p>
   
-  <p text-align:right>Crowds</p>
-   <p text-align:right>Cities</p>
-  <p text-align:right>Heights</p>
-  <p text-align:right>Presents</p>
+  <p text-align:right>-Crowds</p>
+   <p text-align:right>-Cities</p>
+  <p text-align:right>-Heights</p>
+  <p text-align:right>-Presents</p>
   
   <h4 text-align:center>FunFact</h4>
-  <p>I want to be a video game designer</p>
+  <p>I want to be a video game designer.</p>
   
   <img src="Capture.PNG" alt="Game made on a website called scratch" width="19600" height="11000">
   <p>This is a game that me and a few other girls made. My friend Gabby drew the fish and the background. 
