--- a/aboutme.html
+++ b/aboutme.html
@@ -57,6 +57,17 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   Catherine came up with the actual idea of the game. And Pei Yoa coded a bubble that floats across the screen from time to
   time that helps you win the game. The objective was to avoid the fish, and catch the bubbles for air.</p>
   
+  <h1 text-align:center>Reflection</h1>
+    <h3 text-align:center>Python VS. Scratch</h3>
+  <h5>Similarities</h5>
+  <p> -Beginner friendly</p>
+  <p> -Uses the same functions</p>
+  
+  <h5>Differences</h5>
+  <p> -Write out the code</p>
+  <p> -Different names for some things</p>
+  <p> -I like Python better</p>
+  
   <h4 text-align:center>Favorite Links</h4>
   <a hre="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">"Nathan Sharp"</a>
 </body>
