--- a/aboutme.html
+++ b/aboutme.html
@@ -8,8 +8,9 @@ color:(70,80,90);
 font-size:56px;
 }
   
-#p01{
-border: 1px solid red;
+p{
+border: 1px solid powderblue;
+  color:powderblue;
 }
   </style>
 </head>
