--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@ font-size:56px;
   
 p{
 border: 1px solid powderblue;
-  background color:powderblue;
+  background-color:powderblue;
 }
   </style>
 </head>
