--- a/aboutme.html
+++ b/aboutme.html
@@ -10,8 +10,12 @@ font-size:56px;
   
 p{
 border: 1px solid powderblue;
-  background-color:powderblue;
 }
+  
+  body{
+    background-color:powderblue;
+  }
+  
   </style>
 </head>
 <body>
