--- a/aboutme.html
+++ b/aboutme.html
@@ -12,13 +12,9 @@ p{
 border: 1px solid powderblue;
 }
   
-  body{
-    background-color:powderblue;
-  }
-  
   </style>
 </head>
-<body>
+<body style="background-color:powderblue;">
   
 <h1><strong>Alexandrea Whitehouse</strong></h1>
   
