--- a/aboutme.html
+++ b/aboutme.html
@@ -33,22 +33,19 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   <p font-size:30px text-align:left><b>Likes</b></p>
 
 
-  <p text-align:left> -Doctor Who</p>
-  
-  <p text-align:left> -Sherlock</p>
- 
-  <p text-align:left> -Harry Potter</p>
-  
-  <p text-align:left> -Anime</p>
-  
-  <p text-align:left> -Video Games</p>
-  
+  <p> -Doctor Who</p>
+  <p text-align:right> -Crowds</p>
+  <p> -Sherlock</p>
+    <p text-align:right> -Cities</p>
+  <p> -Harry Potter</p>
+    <p text-align:right> -Heights</p>
+  <p> -Anime</p>
+    <p text-align:right> -Presents</p>
+  <p> -Video Games</p>
+  <br>
   <p font-size:30px text-align:right><b>Dislikes</b></p>
   
-  <p text-align:right> -Crowds</p>
-   <p text-align:right> -Cities</p>
-  <p text-align:right> -Heights</p>
-  <p text-align:right> -Presents</p>
+  
   
   <h4 text-align:center>FunFact</h4>
   <p>I want to be a video game designer.</p>
