--- a/aboutme.html
+++ b/aboutme.html
@@ -30,22 +30,19 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
 </p>
   
 
-  <p font-size:30px text-align:left><b>Likes</b></p>
-
-
-  <p> -Doctor Who</p>
-  <p text-align:right> -Crowds</p>
-  <p> -Sherlock</p>
-    <p text-align:right> -Cities</p>
-  <p> -Harry Potter</p>
-    <p text-align:right> -Heights</p>
-  <p> -Anime</p>
-    <p text-align:right> -Presents</p>
-  <p> -Video Games</p>
-  <br>
+  <p font-size:30px color:(50,255,15)><b>Likes</b></p>
   <p font-size:30px text-align:right><b>Dislikes</b></p>
-  
-  
+
+
+  <p color:(50,255,15)> -Doctor Who</p>
+  <p text-align:right> -Crowds</p>
+  <p color:(50,255,15)> -Sherlock</p>
+    <p text-align:right> -Cities</p>
+  <p color:(50,255,15)> -Harry Potter</p>
+    <p text-align:right> -Heights</p>
+  <p color:(50,255,15)> -Anime</p>
+    <p text-align:right> -Presents</p>
+  <p color:(50,255,15)> -Video Games</p>
   
   <h4 text-align:center>FunFact</h4>
   <p>I want to be a video game designer.</p>
