--- a/aboutme.html
+++ b/aboutme.html
@@ -31,17 +31,17 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   
 
   <p font-size:30px color:(50,255,15)><b>Likes</b></p>
-  <p font-size:30px text-align:right><b>Dislikes</b></p>
+  <p font-size:30px text-align:right color:(255,15,50)><b>Dislikes</b></p>
 
 
   <p color:(50,255,15)> -Doctor Who</p>
-  <p text-align:right> -Crowds</p>
+  <p text-align:right color:(255,15,50)> -Crowds</p>
   <p color:(50,255,15)> -Sherlock</p>
-    <p text-align:right> -Cities</p>
+    <p text-align:right color:(255,15,50)> -Cities</p>
   <p color:(50,255,15)> -Harry Potter</p>
-    <p text-align:right> -Heights</p>
+    <p text-align:right color:(255,15,50)> -Heights</p>
   <p color:(50,255,15)> -Anime</p>
-    <p text-align:right> -Presents</p>
+    <p text-align:right color:(255,15,50)> -Presents</p>
   <p color:(50,255,15)> -Video Games</p>
   
   <h4 text-align:center>FunFact</h4>
