--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,10 @@ font-size:56px;
 p{
 border: 1px solid powderblue;
 }
+  #p01{
+    text-align:right;
+    color:(255,15,50);
+  }
   
   </style>
 </head>
@@ -20,7 +24,7 @@ border: 1px solid powderblue;
   
 <h4 text-align:center><b>Bio</b></h4>
   
-<p id="p01">I am a sixteen year-old girl who lives in the small town of North Berwick, 
+<p>I am a sixteen year-old girl who lives in the small town of North Berwick, 
 Maine. I joined <abbr title="Girls Who Code">GWC</abbr> as to complete the 
 <abbr title="Science, Technology, Engineering, and Math">S.T.E.M</abbr> that 
 my school gives out every year to a graduating applicant that meets several 
@@ -31,17 +35,17 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   
 
   <p font-size:30px color:(50,255,15)><b>Likes</b></p>
-  <p font-size:30px text-align:right color:(255,15,50)><b>Dislikes</b></p>
+  <p id="p01"><b>Dislikes</b></p>
 
 
   <p color:(50,255,15)> -Doctor Who</p>
-  <p text-align:right color:(255,15,50)> -Crowds</p>
+  <p id="p01"> -Crowds</p>
   <p color:(50,255,15)> -Sherlock</p>
-    <p text-align:right color:(255,15,50)> -Cities</p>
+    <p id="p01"> -Cities</p>
   <p color:(50,255,15)> -Harry Potter</p>
-    <p text-align:right color:(255,15,50)> -Heights</p>
+    <p id="p01"> -Heights</p>
   <p color:(50,255,15)> -Anime</p>
-    <p text-align:right color:(255,15,50)> -Presents</p>
+    <p id="p01"> -Presents</p>
   <p color:(50,255,15)> -Video Games</p>
   
   <h4 text-align:center>FunFact</h4>
