--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@ border: 1px solid powderblue;
 }
   #p01{
     text-align:right;
-    color:rgb(255,15,50);
+    color:firebrick;
   }
   
   </style>
@@ -38,15 +38,15 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   <p id="p01"><b>Dislikes</b></p>
 
 
-  <p color:rgb(50,255,15)> -Doctor Who</p>
+  <p color:#228B22> -Doctor Who</p>
   <p id="p01"> -Crowds</p>
-  <p color:rgb(50,255,15)> -Sherlock</p>
+  <p color:#228B22> -Sherlock</p>
     <p id="p01"> -Cities</p>
-  <p color:rgb(50,255,15)> -Harry Potter</p>
+  <p color:#228B22> -Harry Potter</p>
     <p id="p01"> -Heights</p>
-  <p color:rgb(50,255,15)> -Anime</p>
+  <p color:#228B22> -Anime</p>
     <p id="p01"> -Presents</p>
-  <p color:rgb(50,255,15)> -Video Games</p>
+  <p color:#228B22> -Video Games</p>
   
   <h4 text-align:center>FunFact</h4>
   <p>I want to be a video game designer.</p>
