--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
     <p id="p01"> -Cities</p>
   <p color:#228B22> -Harry Potter</p>
     <p id="p01"> -Heights</p>
-  <p color:#228B22> -Anime</p>
+  <p color:SeaGreen> -Anime</p>
     <p id="p01"> -Presents</p>
   <p color:#228B22> -Video Games</p>
   
