--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   <p id="p01"><b>Dislikes</b></p>
 
 
-  <p color:#228B22> -Doctor Who</p>
+  <p color:#228B22;> -Doctor Who</p>
   <p id="p01"> -Crowds</p>
   <p color:#228B22> -Sherlock</p>
     <p id="p01"> -Cities</p>
