--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,9 @@ border: 1px solid powderblue;
     text-align:right;
     color:#800000;
   }
+  #p02{
+    color:#228B22;
+  }
   
   </style>
 </head>
@@ -38,15 +41,15 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
   <p id="p01"><b>Dislikes</b></p>
 
 
-  <p color:#228B22;> -Doctor Who</p>
+  <p id="p02"> -Doctor Who</p>
   <p id="p01"> -Crowds</p>
-  <p color:#228B22> -Sherlock</p>
+  <p id="p02"> -Sherlock</p>
     <p id="p01"> -Cities</p>
-  <p color:#228B22> -Harry Potter</p>
+  <p id="p02"> -Harry Potter</p>
     <p id="p01"> -Heights</p>
-  <p color:SeaGreen> -Anime</p>
+  <p id="p02"> -Anime</p>
     <p id="p01"> -Presents</p>
-  <p color:#228B22> -Video Games</p>
+  <p id="p02"> -Video Games</p>
   
   <h4 text-align:center>FunFact</h4>
   <p>I want to be a video game designer.</p>
