--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@ border: 1px solid powderblue;
     color:#800000;
   }
   #p02{
-    color:#228B22;
+    color:SeaGreen;
   }
   
   </style>
@@ -37,7 +37,7 @@ completed one of the E.L.Os last Summer when I went to a computer building camp.
 </p>
   
 
-  <p font-size:30px color:(50,255,15)><b>Likes</b></p>
+  <p id="p02"><b>Likes</b></p>
   <p id="p01"><b>Dislikes</b></p>
 
 
