--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@ border: 1px solid powderblue;
     color:#800000;
   }
   #p02{
-    color:ForestGreen;
+    color:DarkOliveGreen;
   }
   
   </style>
