--- a/aboutme.html
+++ b/aboutme.html
@@ -8,9 +8,6 @@ color:(70,80,90);
 font-size:56px;
 }
   
-p{
-border: 1px solid powderblue;
-}
   #p01{
     text-align:right;
     color:#800000;
@@ -21,7 +18,7 @@ border: 1px solid powderblue;
   
   </style>
 </head>
-<body style="background-color:powderblue;">
+<body style="background-color:LightCyan;">
   
 <h1><strong>Alexandrea Whitehouse</strong></h1>
   
