--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@ font-size:56px;
   
   </style>
 </head>
-<body style="background-color:Azure;">
+<body style="background-color:Cornsilk;">
   
 <h1><strong>Alexandrea Whitehouse</strong></h1>
   
