--- a/aboutme.html
+++ b/aboutme.html
@@ -10,10 +10,10 @@ font-size:56px;
   
   #p01{
     text-align:right;
-    color:#800000;
+    color:MediumSlateBlue;
   }
   #p02{
-    color:Olive;
+    color:Blue;
   }
   
   </style>
