--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@ font-size:56px;
   
   #p01{
     text-align:right;
-    color:MediumSlateBlue;
+    color:MediumOrchid;
   }
   #p02{
     color:Blue;
