--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@ font-size:56px;
 }
   
   #p01{
-    text-align:right;
+    text-align:center;
     color:MediumOrchid;
   }
   #p02{
@@ -33,21 +33,21 @@ requirements. One of the requirements for the endorsement is to have two
 completed one of the E.L.Os last Summer when I went to a computer building camp.
 </p>
   
-
+<pre>
   <p id="p02"><b>Likes</b></p>
-  <p id="p01"><b>Dislikes</b></p>
+  <p id="p01"><b>     Dislikes</b></p>
 
 
   <p id="p02"> -Doctor Who</p>
-  <p id="p01"> -Crowds</p>
+  <p id="p01">        -Crowds</p>
   <p id="p02"> -Sherlock</p>
-    <p id="p01"> -Cities</p>
+    <p id="p01">      -Cities</p>
   <p id="p02"> -Harry Potter</p>
-    <p id="p01"> -Heights</p>
+    <p id="p01">      -Heights</p>
   <p id="p02"> -Anime</p>
-    <p id="p01"> -Presents</p>
+    <p id="p01">      -Presents</p>
   <p id="p02"> -Video Games</p>
-  
+  </pre>
   <h4 text-align:center>FunFact</h4>
   <p>I want to be a video game designer.</p>
   
