--- a/aboutme.html
+++ b/aboutme.html
@@ -25,27 +25,24 @@ font-size:56px;
   
 <h4 text-align:center><b>Bio</b></h4>
   
-<p>I am a sixteen year-old girl who lives in the small town of North Berwick, 
-Maine. I joined <abbr title="Girls Who Code">GWC</abbr> as to complete the 
-<abbr title="Science, Technology, Engineering, and Math">S.T.E.M</abbr> that 
-my school gives out every year to a graduating applicant that meets several 
-requirements. One of the requirements for the endorsement is to have two 
-<abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already 
-completed one of the E.L.Os last Summer when I went to a computer building camp.
-</p>
+<p text-align:center>I am a sixteen year-old girl who lives in the small town of North Berwick, Maine. I joined <abbr title="Girls Who Code">GWC</abbr> 
+as to complete the <abbr title="Science, Technology, Engineering, and Math">S.T.E.M</abbr> that my school gives out every year to a 
+graduating applicant that meets several requirements. One of the requirements for the endorsement is to have two 
+<abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed one of the E.L.Os last Summer when I went to a 
+computer building camp.</p>
   
 <pre>
-  <p id="p02"><b>Likes</b></p>
+  <p id="p02"><b>Likes      </b></p>
   <p id="p01"><b>                 Dislikes</b></p>
-  <p id="p02"> -Doctor Who</p>
+  <p id="p02"> -Doctor Who      </p>
   <p id="p01">                    -Crowds</p>
-  <p id="p02"> -Sherlock</p>
+  <p id="p02"> -Sherlock        </p>
     <p id="p01">                  -Cities</p>
-  <p id="p02"> -Harry Potter</p>
+  <p id="p02"> -Harry Potter    </p>
     <p id="p01">                  -Heights</p>
-  <p id="p02"> -Anime</p>
+  <p id="p02"> -Anime           </p>
     <p id="p01">                  -Presents</p>
-  <p id="p02"> -Video Games</p>
+  <p id="p02"> -Video Games     </p>
   </pre>
   <h4 text-align:center>FunFact</h4>
   <p>I want to be a video game designer.</p>
