--- a/aboutme.html
+++ b/aboutme.html
@@ -64,6 +64,8 @@ computer building camp.</p>
   <p> -I like Python better</p>
   
   <h4 text-align:center>Favorite Links</h4>
-  <a hre="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">"Nathan Sharp"</a>
+ <pre>
+  <a href="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">"Nathan Sharp"</a>    <a href="https://www.youtube.com/watch?v=RLcdPpjKKHo">In The Middle Of Starting Over</a>
+</pre>
 </body>
 </html>
