--- a/aboutme.html
+++ b/aboutme.html
@@ -65,7 +65,9 @@ computer building camp.</p>
   
   <h4 text-align:center>Favorite Links</h4>
  <pre>
-  <a href="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">Nathan Sharp</a>    <a href="https://www.youtube.com/watch?v=RLcdPpjKKHo">In The Middle Of Starting Over</a>
+         <h6>YouTubers</h6>                                                                      <h6>Songs</h6>
+  <a href="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">Nathan Sharp</a>   <a href="https://www.youtube.com/watch?v=RLcdPpjKKHo">In The Middle Of Starting Over</a>
+  <a href="https://www.youtube.com/user/peterhollens/videos">Peter Hollens</a>
 </pre>
 </body>
 </html>
