--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <title>About Me</title>
 <style>
 h1{
 text-align:center;
 color:(70,80,90);
 font-size:56px;
+}
+
+h4{
+text-align:center;
 }
   
   #p01{
@@ -44,7 +49,7 @@ computer building camp.</p>
     <p id="p01">                  -Presents</p>
   <p id="p02"> -Video Games     </p>
   </pre>
-  <h4 text-align:center>FunFact</h4>
+  <h4>FunFact</h4>
   <p>I want to be a video game designer.</p>
   
   <img src="Capture.PNG" alt="Game made on a website called scratch" width="200" height="150">
@@ -52,20 +57,16 @@ computer building camp.</p>
   Catherine came up with the actual idea of the game. And Pei Yoa coded a bubble that floats across the screen from time to
   time that helps you win the game. The objective was to avoid the fish, and catch the bubbles for air.</p>
   
-  <h1 text-align:center>Reflection</h1>
-    <h3 text-align:center>Python VS. Scratch</h3>
-  <h5>Similarities</h5>
-  <p> -Beginner friendly</p>
-  <p> -Uses the same functions</p>
+  <h1>Reflection</h1>
+  <h3 text-align:center>Python VS. Scratch</h3>
+  <h5>Similarities                                                Differences</h5>
+  <p> -Beginner friendly                                           -Write out the code</p>
+  <p> -Uses the same functions                                     -Different names for some things</p>
+  <p>                                                              -I like Python better</p>
   
-  <h5>Differences</h5>
-  <p> -Write out the code</p>
-  <p> -Different names for some things</p>
-  <p> -I like Python better</p>
-  
-  <h4 text-align:center>Favorite Links</h4>
+  <h4>Favorite Links</h4>
  <pre>
-         <h6>YouTubers</h6>                                                                      <h6>Songs</h6>
+         <h6>YouTubers                                                                            Songs         </h5>
   <a href="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">Nathan Sharp</a>   <a href="https://www.youtube.com/watch?v=RLcdPpjKKHo">In The Middle Of Starting Over</a>
   <a href="https://www.youtube.com/user/peterhollens/videos">Peter Hollens</a>
 </pre>
