--- a/aboutme.html
+++ b/aboutme.html
@@ -13,12 +13,12 @@ h4{
 text-align:center;
 }
   
-  p.01{
+  p.dislikes{
     text-align:center;
     color:MediumOrchid;
     display:none;
   }
-  p.02{
+  p.likes{
     text-align:center;
     color:Blue;
     display:none;
@@ -37,27 +37,27 @@ as to complete the <abbr title="Science, Technology, Engineering, and Math">S.T.
 graduating applicant that meets several requirements. One of the requirements for the endorsement is to have two 
 <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed one of the E.L.Os last Summer when I went to a 
 computer building camp.</p>
-  
-<pre>
-<button type="button"
+ <button type="button"
 onclick="document.getElementById('p02').style.display='block'">Click To Know What I Like!
 </button>
 
 <button type="button"
 onclick="document.getElementById('p01').style.display='block'">Click To Know What I Dislike!
-</button>
+</button> 
+<pre>
 
-  <p class="p02"><b>Likes      </b></p>
-  <p class="p01"><b>                 Dislikes</b></p>
-  <p class="p02"> -Doctor Who      </p>
-  <p class="p01">                    -Crowds</p>
-  <p class="p02"> -Sherlock        </p>
-    <p class="p01">                  -Cities</p>
-  <p class="p02"> -Harry Potter    </p>
-    <p class="p01">                  -Heights</p>
-  <p class="p02"> -Anime           </p>
-    <p class="p01">                  -Presents</p>
-  <p class="p02"> -Video Games     </p>
+
+  <p class="dislikes"><b>Likes      </b></p>
+  <p class="likes"><b>                 Dislikes</b></p>
+  <p class="dislikes"> -Doctor Who      </p>
+  <p class="likes">                    -Crowds</p>
+  <p class="dislikes"> -Sherlock        </p>
+    <p class="likes">                  -Cities</p>
+  <p class="dislikes"> -Harry Potter    </p>
+    <p class="likes">                  -Heights</p>
+  <p class="dislikes"> -Anime           </p>
+    <p class="likes">                  -Presents</p>
+  <p class="dislikes"> -Video Games     </p>
   </pre>
   <h4 text-align:left>FunFact</h4>
   <p>I want to be a video game designer.</p>
