--- a/aboutme.html
+++ b/aboutme.html
@@ -38,11 +38,11 @@ graduating applicant that meets several requirements. One of the requirements fo
 <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed one of the E.L.Os last Summer when I went to a 
 computer building camp.</p>
  <button type="button"
-onclick="document.getElementById('p02').style.display='block'">Click To Know What I Like!
+onclick="document.getElementById('likes').style.display='block'">Click To Know What I Like!
 </button>
 
 <button type="button"
-onclick="document.getElementById('p01').style.display='block'">Click To Know What I Dislike!
+onclick="document.getElementById('dislikes').style.display='block'">Click To Know What I Dislike!
 </button> 
 <pre>
 
