--- a/aboutme.html
+++ b/aboutme.html
@@ -28,8 +28,8 @@ text-align:center;
 </head>
 <body style="background-color:PaleGoldenRod;">
   
-window.alert(This page is about me, you can learn more about me if you click on the buttons!)   
-\\This will have a window alert telling you how to interact with my page.
+window.alert(This page is about me, you can learn more about me if you click on the buttons!);   
+#This will have a window alert telling you how to interact with my page.
   
 <h1><strong>Alexandrea Whitehouse</strong></h1>
   
@@ -40,7 +40,7 @@ Math">S.T.E.M</abbr> that my school gives out every year to a graduating applica
 requirements for the endorsement is to have two <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed 
 one of the E.L.Os last Summer when I went to a computer building camp.">Bio</button>
   
-\\My bio will show with the click of the button above
+#My bio will show with the click of the button above
   
 <p text-align:center id="main"></p>
  
@@ -48,7 +48,7 @@ one of the E.L.Os last Summer when I went to a computer building camp.">Bio</but
 onclick="document.getElementById('likes').style.display='block'">Click To Know What I Like!
 </button>
   
-\\The first button when clicked will show some things I like and the second button when clicked will list some things that I dislike
+#The first button when clicked will show some things I like and the second button when clicked will list some things that I dislike
   
 <button type="button"
 onclick="document.getElementById('dislikes').style.display='block'">Click To Know What I Dislike!
@@ -69,14 +69,14 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
   <p class="dislikes"> -Video Games     </p>
   
 </pre>
-\\above are my list of likes and dislikes centered in the middle of the page
+#above are my list of likes and dislikes centered in the middle of the page
   
   <h3 text-align:left>FunFact</h3>
   <p>I want to be a video game designer.</p>
-\\a fun fact about me
+#a fun fact about me
   
   <img src="Capture.PNG" alt="Game made on a website called scratch" width="200" height="150">
-\\This should display an image of the scratch game that me and two others made with the discription below in lines 76-79
+#This should display an image of the scratch game that me and two others made with the discription below in lines 76-79
   
   <p>This is a game that me and a few other girls made. My friend Gabby drew the fish and the background. 
   Catherine came up with the actual idea of the game. And Pei Yoa coded a bubble that floats across the screen from time to
@@ -90,7 +90,7 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
         <p> -Uses the same functions                                     -Different names for some things</p>
         <p>                                                              -I like Python better</p>
   </pre>
-  \\above should be a reflection on similarities and differences I found in Python and Scratch in the center of the page with the format seen
+#above should be a reflection on similarities and differences I found in Python and Scratch in the center of the page with the format seen
   
   <h3>Favorite Links</h4>
  <pre>
@@ -98,7 +98,7 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
   <a href="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">Nathan Sharp</a>   <a href="https://www.youtube.com/watch?v=RLcdPpjKKHo">In The Middle Of Starting Over</a>
   <a href="https://www.youtube.com/user/peterhollens/videos">Peter Hollens</a>
 </pre>
-\\above should be three links, two to the channels of two of my favorite YouTube singers and the other a link to one of my favorite songs
+#above should be three links, two to the channels of two of my favorite YouTube singers and the other a link to one of my favorite songs
   
 </body>
 </html>
