--- a/aboutme.html
+++ b/aboutme.html
@@ -27,9 +27,12 @@ text-align:center;
   </style>
 </head>
 <body style="background-color:PaleGoldenRod;">
-  
+
+ <script>
 window.alert(This page is about me, you can learn more about me if you click on the buttons!);   
-#This will have a window alert telling you how to interact with my page.
+//This will have a window alert telling you how to interact with my page.
+ 
+  
   
 <h1><strong>Alexandrea Whitehouse</strong></h1>
   
@@ -53,7 +56,7 @@ onclick="document.getElementById('likes').style.display='block'">Click To Know W
 <button type="button"
 onclick="document.getElementById('dislikes').style.display='block'">Click To Know What I Dislike!
 </button>
-  
+  </script>  
 <pre>
 
   <p class="dislikes"><b>Likes      </b></p>
