--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@ Math">S.T.E.M</abbr> that my school gives out every year to a graduating applica
 requirements for the endorsement is to have two <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed 
 one of the E.L.Os last Summer when I went to a computer building camp.">Bio</button>
   
-#My bio will show with the click of the button above
+//My bio will show with the click of the button above
   
 <p text-align:center id="main"></p>
  
@@ -51,7 +51,7 @@ one of the E.L.Os last Summer when I went to a computer building camp.">Bio</but
 onclick="document.getElementById('likes').style.display='block'">Click To Know What I Like!
 </button>
   
-#The first button when clicked will show some things I like and the second button when clicked will list some things that I dislike
+//The first button when clicked will show some things I like and the second button when clicked will list some things that I dislike
   
 <button type="button"
 onclick="document.getElementById('dislikes').style.display='block'">Click To Know What I Dislike!
