--- a/aboutme.html
+++ b/aboutme.html
@@ -28,13 +28,11 @@ text-align:center;
 </head>
 <body style="background-color:PaleGoldenRod;">
 
+ <h1><strong>Alexandrea Whitehouse</strong></h1> 
+ 
  <script>
 window.alert(This page is about me, you can learn more about me if you click on the buttons!);   
 //This will have a window alert telling you how to interact with my page.
- 
-  
-  
-<h1><strong>Alexandrea Whitehouse</strong></h1>
   
 <button type="button"
 onclick="document.getElementById("main").innerHTML=I am a sixteen year-old girl who lives in the small town of North Berwick, Maine.
@@ -42,11 +40,13 @@ I joined <abbr title="Girls Who Code">GWC</abbr> as to complete the <abbr title=
 Math">S.T.E.M</abbr> that my school gives out every year to a graduating applicant that meets several requirements. One of the 
 requirements for the endorsement is to have two <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed 
 one of the E.L.Os last Summer when I went to a computer building camp.">Bio</button>
-  
 //My bio will show with the click of the button above
   
+  </script>
+     
 <p text-align:center id="main"></p>
- 
+
+  <script>
   <button type="button"
 onclick="document.getElementById('likes').style.display='block'">Click To Know What I Like!
 </button>
