--- a/aboutme.html
+++ b/aboutme.html
@@ -35,16 +35,16 @@ window.alert(This page is about me, you can learn more about me if you click on 
 //This will have a window alert telling you how to interact with my page.
   
 <button type="button"
-onclick="document.getElementById("main").innerHTML=I am a sixteen year-old girl who lives in the small town of North Berwick, Maine.
-I joined <abbr title="Girls Who Code">GWC</abbr> as to complete the <abbr title="Science, Technology, Engineering, and 
-Math">S.T.E.M</abbr> that my school gives out every year to a graduating applicant that meets several requirements. One of the 
-requirements for the endorsement is to have two <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed 
-one of the E.L.Os last Summer when I went to a computer building camp.">Bio</button>
+onclick="document.getElementById("main").style.display='block'">Bio</button>
 //My bio will show with the click of the button above
   
   </script>
      
-<p text-align:center id="main"></p>
+<p id="main" text-align:center display=none>I am a sixteen year-old girl who lives in the small town of North Berwick, Maine.
+I joined <abbr title="Girls Who Code">GWC</abbr> as to complete the <abbr title="Science, Technology, Engineering, and 
+Math">S.T.E.M</abbr> that my school gives out every year to a graduating applicant that meets several requirements. One of the 
+requirements for the endorsement is to have two <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed 
+one of the E.L.Os last Summer when I went to a computer building camp."</p>
 
   <script>
   <button type="button"
