--- a/aboutme.html
+++ b/aboutme.html
@@ -72,14 +72,14 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
   <p class="dislikes"> -Video Games     </p>
   
 </pre>
-#above are my list of likes and dislikes centered in the middle of the page
+<!-- are my list of likes and dislikes centered in the middle of the page-->
   
   <h3 text-align:left>FunFact</h3>
   <p>I want to be a video game designer.</p>
-#a fun fact about me
+<!--a fun fact about me-->
   
   <img src="Capture.PNG" alt="Game made on a website called scratch" width="200" height="150">
-#This should display an image of the scratch game that me and two others made with the discription below in lines 76-79
+<!--This should display an image of the scratch game that me and two others made with the discription below in lines 76-79-->
   
   <p>This is a game that me and a few other girls made. My friend Gabby drew the fish and the background. 
   Catherine came up with the actual idea of the game. And Pei Yoa coded a bubble that floats across the screen from time to
@@ -93,7 +93,7 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
         <p> -Uses the same functions                                     -Different names for some things</p>
         <p>                                                              -I like Python better</p>
   </pre>
-#above should be a reflection on similarities and differences I found in Python and Scratch in the center of the page with the format seen
+above should be a reflection on similarities and differences I found in Python and Scratch in the center of the page with the format seen
   
   <h3>Favorite Links</h4>
  <pre>
@@ -101,7 +101,7 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
   <a href="https://www.youtube.com/channel/UCAKdbp1bKIdjqjRLIKvXCRA">Nathan Sharp</a>   <a href="https://www.youtube.com/watch?v=RLcdPpjKKHo">In The Middle Of Starting Over</a>
   <a href="https://www.youtube.com/user/peterhollens/videos">Peter Hollens</a>
 </pre>
-#above should be three links, two to the channels of two of my favorite YouTube singers and the other a link to one of my favorite songs
+<!--above should be three links, two to the channels of two of my favorite YouTube singers and the other a link to one of my favorite songs -->
   
 </body>
 </html>
