--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@ onclick="document.getElementById("main").style.display='block'">Bio</button>
   
   </script>
      
-<p id="main" style=text-align:center; display=none>I am a sixteen year-old girl who lives in the small town of North Berwick, Maine.
+<p id="main" style="text-align:center; display=none">I am a sixteen year-old girl who lives in the small town of North Berwick, Maine.
 I joined <abbr title="Girls Who Code">GWC</abbr> as to complete the <abbr title="Science, Technology, Engineering, and 
 Math">S.T.E.M</abbr> that my school gives out every year to a graduating applicant that meets several requirements. One of the 
 requirements for the endorsement is to have two <abbr title="Extended Learning Opportunity">E.L.Os</abbr>. I have already completed 
@@ -87,7 +87,7 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
   
   <pre>
                                               <h2>Reflection</h2>
-        <h3 style=text-align:center>Python VS. Scratch</h3>
+        <h3 style="text-align:center">Python VS. Scratch</h3>
         <h5>Similarities                                                Differences</h5>
         <p> -Beginner friendly                                           -Write out the code</p>
         <p> -Uses the same functions                                     -Different names for some things</p>
