--- a/aboutme.html
+++ b/aboutme.html
@@ -74,7 +74,7 @@ onclick="document.getElementById('dislikes').style.display='block'">Click To Kno
 </pre>
 <!-- are my list of likes and dislikes centered in the middle of the page-->
   
-  <h3 style=text-align:left>FunFact</h3>
+  <h3 style="text-align:left">FunFact</h3>
   <p>I want to be a video game designer.</p>
 <!--a fun fact about me-->
   
