--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@ text-align:center;
  <h1><strong>Alexandrea Whitehouse</strong></h1> 
  
  <script>
-window.alert("This page is about me, you can learn more about me if you click on the buttons!");   
+  alert("This page is about me, you can learn more about me if you click on the buttons!");   
 //This will have a window alert telling you how to interact with my page.
   
 <button type="button"
