--- a/aboutme.html
+++ b/aboutme.html
@@ -26,12 +26,15 @@ text-align:center;
   
   </style>
 </head>
-<body style="background-color:PaleGoldenRod;">
+<body style="background-color:PaleGoldenRod;" onload='myfunction()'>
 
  <h1><strong>Alexandrea Whitehouse</strong></h1> 
  
  <script>
-  alert("This page is about me, you can learn more about me if you click on the buttons!");   
+  function myfunction(){
+   alert("This page is about me, you can learn more about me if you click on the buttons!"); }
+ 
+    
 //This will have a window alert telling you how to interact with my page.
   
 <button type="button"
