--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@ text-align:center;
   
   </style>
 </head>
-<body style="background-color:PaleGoldenRod;" onload='myfunction()'>
+<body onload='myfunction()'>
 
  <h1><strong>Alexandrea Whitehouse</strong></h1> 
  
